Modules/VPC/Main.tf
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support = true
  tags = {
    "Name" = "vpc-${var.region_name}"
  }
}

resource "aws_subnet" "public" {
  vpc_id=aws_vpc.main.id
  cidr_block = cidrsubnet(var.vpc_cidr,8,1)
  availability_zone = "${var.region_name}a"
  map_public_ip_on_launch = true
  tags = {
    Name = "public-subnet-${var.region_name}" 
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name "igw-${var.region_name}"
  }
}

resource "aws_route_table" "public" {
  vpc_id=aws_vpc.main.id
  tags = {
    Name "public-rt-${var.region_name}"
  }
}

resource "aws route" "public_internet_access" {
  route_table_id=aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0" 
  gateway_id = aws_internet_gateway.igw.id
}


resource "aws route_table_association" "public_assoc" {
  subnet_id = aws_subnet.public.id
  route_table_id=aws_route_table.public.id
}


resource "aws_subnet" "private" {
  vpc_id=aws_vpc.main.id
  cidr_block = cidrsubnet(var.vpc_cidr,8,2) 
  availability_zone= "${var.region_name}a"
  tags = {
    Name "private-subnet-${var.region_name}" }
  }
}

resource "aws_route_table" "private" {
  vpc_id=aws_vpc.main.id
  tags = {
    Name = "private-rt-${var.region_name}"
  }
}

resource "aws_route" "private_internet_access" {
  route_table_id=aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gatway.main.id
  depends_on = [ aws_nat_gateway.main ]
}

resource "aws_route_table_association" "private_assoc" {
  subnet_id = aws_subnet.private.id
  route_table_id = aws_route_table.private.id
}

resource "aws_eip" "nat" {
  domain = "vpc"
}

resource "aws_nat_gateway" "main" {
  allocation_id = aws_eip.nat.id
  subnet_id = aws_subnet.public.id
  depends_on = [ aws_internet_gateway.igw]
}
